fixed z-index bug for good

--- a/assets/css/profiles.css
+++ b/assets/css/profiles.css
@@ -612,7 +612,7 @@ input:checked + .slider:before {
   padding: 1rem;
   width: 17rem;
   position: absolute;
-  z-index: 100;
+  z-index: 1;
   top: 48px;
 }
 
